--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
               <div class="absolute hidden md:block right-20 -top-12 mt-12 rotate-[110deg]">
                 <img src="src/img/panah_merah.png" class="w-20 transform scale-y-[-1]" />
               </div>
-              <img src="src/img/logokkn6.png" alt="logo" class="w-38" />
+              <div class="flex flex-col items-center">
+                <img src="src/img/logokkn6.png" alt="logo" class="w-38" />
+                <button id="btnDownloadLogo" class="text-xs rounded-full border hover:bg-lime-50 hover:text-emerald-950 hover:font-bold cursor-pointer px-4 py-2 mt-3">Download Logo</button>
+              </div>
             </div>
             <div class="w-full flex justify-center items-center" data-aos="fade-down-left">
               <div class="text-end">Simbol 17 anggota kelompok KKN, dengan satu bintang emas sebagai lambang harapan, dan semangat.</div>
@@ -189,6 +192,46 @@
                 <img src="src/img/filosofi_logo/siluet_ok.png" alt="logo" class="w-28 md:w-44" />
               </div>
               <div class="text-end md:text-start">Membentuk gestur tangan “OK” menggambarkan bahwa kelompok siap menghadapi tantangan.</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Pop Up Modal -->
+        <div id="modalDownloadLogo" class="hidden transition-opacity duration-300">
+          <div class="inset-0 z-40 fixed">
+            <div class="bg-black opacity-80 w-full h-full"></div>
+          </div>
+          <div class="inset-0 z-50 fixed my-5 md:my-20 mx-5 md:mx-40">
+            <div id="modalContent" class="bg-emerald-950 text-lime-50 w-full h-full rounded-lg scale-95 opacity-0 transition-all duration-300">
+              <div class="flex justify-between px-5 md:px-10 py-5">
+                <h1 class="font-bold text-base md:text-xl"><i class="fa-solid fa-download"></i> Download Logo</h1>
+                <div>
+                  <button id="btnCloseModal" class="hover:text-emerald-400 cursor-pointer"><i class="fa-solid fa-x text-xl"></i></button>
+                </div>
+              </div>
+              <div class="border border-gray-300"></div>
+              <div class="px-10 py-8">
+                <div class="flex gap-3">
+                  <div class="w-full flex flex-col items-center justify-center">
+                    <img id="logoKKN6" src="src/img/logokkn6.png" class="w-36" />
+                    <button id="btnLogoKKN6" class="text-xs rounded-full border hover:bg-lime-50 hover:text-emerald-950 hover:font-bold cursor-pointer px-4 py-2 mt-3">Download</button>
+                  </div>
+                  <div class="w-full flex flex-col items-center justify-center">
+                    <img id="logoKKN6Putih" src="src/img/logokkn6.png" class="w-36 filter invert brightness-0 saturate-0" />
+                    <button id="btnLogoKKN6Putih" class="text-xs rounded-full border hover:bg-lime-50 hover:text-emerald-950 hover:font-bold cursor-pointer px-4 py-2 mt-3">Download</button>
+                  </div>
+                </div>
+                <div class="md:flex gap-3 mt-5">
+                  <div class="w-full flex flex-col items-center justify-center">
+                    <img id="logoTextKKN6" src="src/img/logotextkkn6.png" class="w-96" />
+                    <button id="btnLogoTextKKN6" class="text-xs rounded-full border hover:bg-lime-50 hover:text-emerald-950 hover:font-bold cursor-pointer px-4 py-2 -mt-2">Download</button>
+                  </div>
+                  <div class="w-full flex flex-col items-center justify-center mt-5 md:mt-0">
+                    <img id="logoTextKKN6Putih" src="src/img/logotextkkn6.png" class="w-96 filter invert brightness-0 saturate-0" />
+                    <button id="btnLogoTextKKN6Putih" class="text-xs rounded-full border hover:bg-lime-50 hover:text-emerald-950 hover:font-bold cursor-pointer px-4 py-2 -mt-2">Download</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -247,7 +290,7 @@
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
               <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md -z-10 opacity-20" style="background-image: url('src/img/pattern.png')"></div>
               <div class="relative bg-gray-300 w-[180px] h-[180px] rounded-md flex justify-center items-center font-bold">
-                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/rani.jpg'); background-size: 220%; background-position: center 60%"></div>
+                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/rani2.jpg'); background-size: 250%; background-position: center 65%"></div>
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Rani Wahyuni</p>
