--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div data-aos="fade-right" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
               <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md -z-10 opacity-20" style="background-image: url('src/img/pattern.png')"></div>
               <div class="relative bg-gray-300 w-[180px] h-[180px] rounded-md flex justify-center items-center font-bold">
-                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/dani.jpg'); background-size: 240%; background-position: center 40%"></div>
+                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/dani2.jpg'); background-size: 220%; background-position: center 45%"></div>
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Rahmat Dani</p>
@@ -312,7 +312,7 @@
             <div data-aos="fade-right" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
               <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md -z-10 opacity-20" style="background-image: url('src/img/pattern.png')"></div>
               <div class="relative bg-gray-300 w-[180px] h-[180px] rounded-md flex justify-center items-center font-bold">
-                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/nadia.png'); background-size: 240%; background-position: center 63%; filter: contrast(80%)"></div>
+                <div class="absolute inset-0 bg-cover bg-center bg-no-repeat rounded-md" style="background-image: url('src/img/anggota/nadia.jpg'); background-size: 240%; background-position: center 63%; filter: contrast(80%)"></div>
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Nadya Silvana N.</p>
