--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Nadya Silvana N.</p>
-                <p class="text-sm">Devisi Admin</p>
+                <p class="text-sm">Divisi Admin</p>
               </div>
             </div>
             <div data-aos="fade-right" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -326,7 +326,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Natasya Zamitah Z.</p>
-                <p class="text-sm">Devisi Admin</p>
+                <p class="text-sm">Divisi Admin</p>
               </div>
             </div>
             <div data-aos="zoom-in" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -336,7 +336,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">khikmal Kurniawan</p>
-                <p class="text-sm">Devisi PDD</p>
+                <p class="text-sm">Divisi PDD</p>
               </div>
             </div>
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -346,7 +346,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Wahyu</p>
-                <p class="text-sm">Devisi PDD</p>
+                <p class="text-sm">Divisi PDD</p>
               </div>
             </div>
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -356,7 +356,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Emil Awaliadi</p>
-                <p class="text-sm">Devisi PDD</p>
+                <p class="text-sm">Divisi PDD</p>
               </div>
             </div>
           </div>
@@ -368,7 +368,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Triana Kris Sandi</p>
-                <p class="text-sm">Devisi Humas</p>
+                <p class="text-sm">Divisi Humas</p>
               </div>
             </div>
             <div data-aos="fade-right" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -378,7 +378,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">M. Arfan Algibrani</p>
-                <p class="text-sm">Devisi Humas</p>
+                <p class="text-sm">Divisi Humas</p>
               </div>
             </div>
             <div data-aos="fade-right" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -388,7 +388,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">M. Rifqi Firdaus</p>
-                <p class="text-sm">Devisi Humas</p>
+                <p class="text-sm">Divisi Humas</p>
               </div>
             </div>
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -398,7 +398,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Geris Muhamad I.</p>
-                <p class="text-sm">Devisi Logistik</p>
+                <p class="text-sm">Divisi Logistik</p>
               </div>
             </div>
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -408,7 +408,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Agung Febriansyah</p>
-                <p class="text-sm">Devisi Logistik</p>
+                <p class="text-sm">Divisi Logistik</p>
               </div>
             </div>
             <div data-aos="fade-left" class="relative bg-emerald-800 w-[180px] h-[250px] rounded-md hover:scale-95 transition duration-300 ease-in-out cursor-pointer">
@@ -418,7 +418,7 @@
               </div>
               <div class="text-lime-50 text-center m-3">
                 <p class="font-semibold">Andika Hervianto P.</p>
-                <p class="text-sm">Devisi Logistik</p>
+                <p class="text-sm">Divisi Logistik</p>
               </div>
             </div>
           </div>
